--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body{
 
 }
 #chatWindow{
-	height:300px;
+	height:400px;
 
 }
 #mainWrapper{
@@ -56,7 +56,7 @@ input{
 <div id="container">
 <div id="namesWrapper">
 <h2>ChatIO</h2>
-<p>Create UserName:</p>
+<p>Create UserName Please:</p>
 <div id="error"></div>
 <form id="userNameForm">
 <input size="35" id="username">
